# nir

./: .gitignore  CMakeLists.txt  README.md  data.cpp  data.h  gist.xlsx  graph.cpp  graph.h  graph_visual.py  main.cpp  report.docx  semaphore.h  task_queue.cpp  task_queue.h  temp
graph/: Graph.cpp  Graph.h  graph_algorithm.cpp  graph_algorithm.h
result/4v/: h_ne.txt  hamilton_stat_FULL.txt  hamilton_stat_HNE.txt
result/5v/: h_e.txt  h_ne.txt  hamilton_stat_FULL.txt  hamilton_stat_HE.txt  hamilton_stat_HNE.txt
result/6v/: h_e.txt  h_ne.txt  hamilton_stat_FULL.txt  hamilton_stat_HE.txt  hamilton_stat_HNE.txt  nh_e.txt  nh_ne.txt
result/7v/: hamilton_stat_FULL.txt  hamilton_stat_HE.txt  hamilton_stat_HNE.txt
result/8v/: h_e.txt  h_ne.txt  hamilton_stat_FULL.txt  hamilton_stat_HE.txt  hamilton_stat_HNE.txt  nh_e.txt  nh_ne.txt
result/9v/: h_e.txt  h_ne.txt  hamilton_stat_FULL.txt  hamilton_stat_HE.txt  hamilton_stat_HNE.txt  nh_e.txt  nh_ne.txt
utils/: mutils.h  utils.h
